디자인 2차 커밋

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       
         </section>
     </section>
-    <section class="container">
+    <section class="contain">
         <section id="news-board">
                 
         </section>
