홈버튼, 검색 엔터 기능 추가

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
     <section class="header">
         <div class="head">
-            <div class="navWrap">
-                 <i class="hide fas fa-bars icon-button" onclick="openNav()"></i>
+            <div class="navWrap"  onclick="openNav()">
+                 <i class="hide fas fa-bars icon-button"></i>
             </div>
             <div class="head-line">
-                <img src="images/logo.svg" alt=""/>
+                <img src="images/logo.svg" alt="" onclick="getLatesNews()"/>
             </div>
             <div class="searchWrap">
                 <i class="fas fa-search icon-button" onclick="openSearchBox()"></i>
