상단 카테고리 언더라인 수정

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
         <section class="menusWrap">
             <div class="menus main-menus">
+                <button id="all">All</button>
                 <button>Business</button>
                 <button>Entertainment</button>
                 <button>General</button>
